2010-11-02  Marc-Antoine Ruel  <maruel@chromium.org>

        Reviewed by Dimitri Glazkov.

        Disable incremental linking for webkit_unit_test and DumpRenderTRee on x86 Windows on chromium build.
        https://bugs.webkit.org/show_bug.cgi?id=48836

        It fails to link otherwise due to lack of virtual address space.

        * WebKit.gyp:

2010-11-02  Ilya Sherman  <isherman@chromium.org>

        Reviewed by Kent Tamura.

        Expose the sendChangeEvent parameter in WebInputElement::setValue() API,
        primarily so that chromium form autofill can fire the onChange event.
        https://bugs.webkit.org/show_bug.cgi?id=48177

        * public/WebInputElement.h:
        * src/WebInputElement.cpp:
        (WebKit::WebInputElement::setValue):

2010-11-02  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: make properties and event listeners look consistent with the styles section.
        https://bugs.webkit.org/show_bug.cgi?id=48827

        * src/js/devTools.css:

2010-11-01  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] Compile TestNetscapePlugin on chromium win
        https://bugs.webkit.org/show_bug.cgi?id=48802

        It creates npTestNetscapePlugin.dll in the build directory, so
        it's not yet loaded by DRT or test_shell.

        * WebKit.gyp:

2010-11-01  Brady Eidson  <beidson@apple.com>

        Reviewed by Anders Carlsson.

        <rdar://problem/7660547> and https://bugs.webkit.org/show_bug.cgi?id=48699
        Context menu support for WebKit 2.

        * src/ChromeClientImpl.h:
        (WebKit::ChromeClientImpl::showContextMenu):

2010-11-01  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: Chromium build fix.

        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::WebDevToolsAgentImpl):

2010-11-01  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.
