@@ -79,6 +79,7 @@ public:
     virtual WebElement element();
     virtual void invalidate();
     virtual void invalidateRect(const WebRect&);
+    virtual void scrollRect(int dx, int dy, const WebRect&);
     virtual void reportGeometry();
     virtual void clearScriptObjects();
     virtual NPObject* scriptableObjectForElement();
